Bug 1797896 - Proxy environment variables can be uppercase on linux now r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D161108