toolkit/system/unixproxy/nsUnixSystemProxySettings.cpp
@@ -15,6 +15,7 @@
 #include "nsNetUtil.h"
 #include "nsISupportsPrimitives.h"
 #include "nsIGSettingsService.h"
+#include "nsReadableUtils.h"
 
 using namespace mozilla;
 
@@ -151,7 +152,16 @@ static nsresult GetProxyFromEnvironment(const nsACString& aScheme,
   envVar.AppendLiteral("_proxy");
   const char* proxyVal = PR_GetEnv(envVar.get());
   if (!proxyVal) {
+    // try uppercase name too
+    ToUpperCase(envVar);
+    proxyVal = PR_GetEnv(envVar.get());
+  }
+  if (!proxyVal) {
     proxyVal = PR_GetEnv("all_proxy");
+    if (!proxyVal) {
+      // try uppercase name too
+      proxyVal = PR_GetEnv("ALL_PROXY");
+    }
     if (!proxyVal) {
       // Return failure so that the caller can detect the failure and
       // fall back to other proxy detection (e.g., WPAD)
@@ -160,6 +170,10 @@ static nsresult GetProxyFromEnvironment(const nsACString& aScheme,
   }
 
   const char* noProxyVal = PR_GetEnv("no_proxy");
+  if (!noProxyVal) {
+    // try uppercase name too
+    noProxyVal = PR_GetEnv("NO_PROXY");
+  }
   if (noProxyVal && IsInNoProxyList(aHost, aPort, noProxyVal)) {
     SetProxyResultDirect(aResult);
     return NS_OK;
